--- a/MyIconApp/project.properties
+++ b/MyIconApp/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=..\\appcompat_v7
-android.library.reference.2=..\\google-play-services_lib
+android.library.reference.1=../../../workspaceAndroid/android-support-v7-appcompat
+android.library.reference.2=../../../workspaceAndroid/google-play-services_lib
