Nuevo servicio ObtenerFechaUltimo para dar soporte a la nueva funcionalidad de Notificaciones y duplicación clases DTO para mantener compatibilidad en la serialización de clases DTO, debido a la refactorización en el cliente (nuevos paquetes para organizar las clases)

--- a/RadioMarcaServer/pom.xml
+++ b/RadioMarcaServer/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- Para poder usar las constantes MIME en MediaType-->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
