--- a/ElBoxeoTieneMusicaApp/app/build.gradle
+++ b/ElBoxeoTieneMusicaApp/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.val.ebtm.myiconnapp"
         minSdkVersion 11
         targetSdkVersion 19
-        versionCode 4
-        versionName "1.1.3"
+        versionCode 6
+        versionName "Notario fix 1"
     }
     buildTypes {
         release {
