--- a/ElBoxeoTieneMusicaApp/app/src/main/AndroidManifest.xml
+++ b/ElBoxeoTieneMusicaApp/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.val.ebtm.myiconnapp"
           xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="5"
-          android:versionName="Notario">
+          android:versionCode="6"
+          android:versionName="Notario fix 1">
 
     <uses-sdk
         android:minSdkVersion="11"
